# scape

./: .gitignore  .opf.yml  README.md  pom.xml
PC/WP.12.PW.1.Automated.Watch/: README.md
PC/WP.9.PC.WP.1.Characterisation.Components/: README.md
PW/WP.14.PW.3.Automated.Planning/: README.md
XA/WP.2.Technical.Coordination/: README.md
doc/WP.10.PC.WP.2.Action.Services.Components/: README.md
doc/WP.13.PW.2.Policy.Representation/: README.md
doc/WP.15.TB.WP.1.Web.Content.Testbed/: README.md
matchboxeval-lib/: pom.xml
pc-ac-migratecomprtiff/: -migratecomprtiff.py
pc-as/: .gitignore  README.md  SCAPE_AS_NOTES  build-service.sh  ffmpeg.xml  generateAllDebianPackages.sh  generateDebianPackage.sh  generateDebianPackageFiles.pl  imagemagick.xml  mencoder.xml  scape-as-abiword-doc2pdf.xml  scape-as-abiword-docx2doc.xml  scape-as-abiword-docx2html.xml  scape-as-ffmpeg-audio2aac.xml  scape-as-ffmpeg-audio2mp3.xml  scape-as-ffmpeg-image2tiff.xml  scape-as-ffmpeg-txt2tiff.xml  scape-as-ffmpeg-video2flv.xml  scape-as-ffmpeg-video2mpeg2.xml  scape-as-handbrake-video2mpeg4.xml  scape-as-imagemagick-html2jp2.xml  scape-as-imagemagick-html2tiff.xml  scape-as-imagemagick-html2txt.xml  scape-as-imagemagick-image2jp2.xml  scape-as-imagemagick-image2tiff.xml  scape-as-imagemagick-image2txt.xml  scape-as-imagemagick-txt2jp2.xml  scape-as-imagemagick-txt2tiff.xml  scape-as-inkscape-svg2png.xml  scape-as-jodconverter-doc2odt.xml  scape-as-jodconverter-doc2pdf.xml  scape-as-jodconverter-odp2ppt.xml  scape-as-jodconverter-ods2pdf.xml  scape-as-jodconverter-ods2xsl.xml  scape-as-jodconverter-odt2pdf.xml  scape-as-jodconverter-ppt2odp.xml  scape-as-jodconverter-ppt2pdf.xml  scape-as-jodconverter-ppt2swf.xml  scape-as-jodconverter-pptx2pdf.xml  scape-as-jodconverter-xsl2ods.xml  (+7 more)
pc-as/old_stuff/: generateDebianPackages4AllToolspecs.sh
pc-as/pc-as-webservice-listings/: compileAndDeploy.sh  pom.xml
pc-as/scripts/: Makefile  addRepositoryAndInstallStuff.sh  generateAllDebianPackages.sh  generateDebianPackage.sh  generateDebianPackageFiles.pl  generateDebianPackageInformation.pl  transformOldServices.pl  workflow_rest_template.t2flow  workflow_soap_template.t2flow
pc-as/scriptsNeededForWebservices/: openoffice-conversion-service.sh
pc-as/scripts_new_schema/: build-wrapper.sh  generateAllDebianPackages.sh  generateDebianPackage.sh  (+3 more)
pc-cc-jpylyzer-wrapper/: README.txt  pom.xml
pc-cc-nanite/: README.md  pom.xml
pc-cc-opjpg-xmldump-patch/: README  opj_j2k_dump.xml  opj_j2k_dump.xsd
pc-cc-strender/: README.md
pc-qa-bitwiser/: pom.xml
pc-qa-matchbox/: CMakeLists.txt  FindOpenCV.cmake  FindXerces.cmake  INSTAL.txt  OpenCVConfig.cmake  README.txt  SCAPE QA.sln
pc-qa-matchbox/DPQA_Compare/: CMakeLists.txt  DPQA_Compare.cpp  DPQA_Compare.h  DPQA_Compare.vcproj  DPQA_Warp.h
pc-qa-matchbox/DPQA_ExtractFeatures/: CMakeLists.txt  DPQA_ExtractFeatures.cpp  DPQA_ExtractFeatures.vcproj
pc-qa-matchbox/DPQA_Train/: CMakeLists.txt  DPQA_Train.cpp  DPQA_Train.vcproj  stdafx.cpp  test.bow.xml
pc-qa-matchbox/DPQAlib/: BOWHistogram.cpp  BOWHistogram.h  BoostSerializer.h  CLAHE.cpp  CLAHE.h  CMakeLists.txt  Characterization.cpp  Characterization.h  Comparison.cpp  Comparison.h  DPQATestClass.cpp  DPQATestClass.h  DPQAlib.vcproj  DoubleOutputParameter.cpp  DoubleOutputParameter.h  ErrorOutputParameter.cpp  ErrorOutputParameter.h  Feature.cpp  Feature.h  ImageHistogram.cpp  ImageHistogram.h  ImageIO.cpp  ImageIO.h  ImageMetadata.cpp  ImageMetadata.h  ImageProfile.cpp  ImageProfile.h  IntOutputParameter.cpp  IntOutputParameter.h  KeyPointOutputParameter.cpp  KeyPointOutputParameter.h  LAHE.cpp  LAHE.h  Level1Feature.cpp  Level1Feature.h  Level2Feature.cpp  Level2Feature.h  Level3Feature.cpp  Level3Feature.h  Level4Feature.cpp  (+43 more)
pc-qa-matchbox/Python/: CompareCollections.py  FindDuplicates.py  MatchboxLib.py
pc-qa-matchbox/debian/: changelog  control  copyright  install
pc-qa-matchbox/doc/: .gitignore  Appendix.tex  Compare.tex  CompareCollections.tex  ExtractFeatures.tex  FindDuplicates.tex  Installation.tex  Matchbox Usermanual.tcp  Matchbox Usermanual.tex  Matchbox.tex  References.bib  Titlepage.docx  Train.tex  TroubleShooting.tex  Workflow.tex  matchboxdoc.tex
pc-qa-matchbox/hadoop/pythonwf/: CalculateBoW.sh  CmdCalculateBoW.sh  CmdCompare.sh  CmdExtractHistogram.sh  CmdExtractSift.sh  Compare.sh  CreateInputFiles.sh  CreateInputList.py  ExtractHistogram.sh  ExtractSift.sh  PythonMatchboxWF.sh  ReadInputFiles.sh  ReadmeMatchboxHadoop  bowinput  inputfiles  summary
pc-qa-matchbox/hadoop/pythonwf/collection/: 00000031.jp2  00000032.jp2  00000033.jp2  00000034.jp2  00000035.jp2  00000036.jp2  00000037.jp2  00000038.jp2  00000039.jp2  00000040.jp2
pc-qa-matchbox/hadoop/pythonwf/workflows/: MatchboxHadoopApi.t2flow
pc-qa-toolwrapper/: .project  README  compare.properties  compare_inputconfig.json  compare_metric.properties  compare_outputconfig.json  default.properties  extract_features.properties  extract_features_ext.properties  extract_features_ext_inputconfig.json  extract_features_outputconfig.json  pom.xml
pc-qa-toolwrapper-rest/: .project  README  h2.xml  log.txt  output.xml  pom.xml
pt-mapred/: .classpath  .directory  .project  README.md  pom.xml
scape-core/: pom.xml
scape-java-services/: pom.xml
tb-lsdr-hocrparser/: pom.xml
tb-lsdr-matchboxeval-lib/: README
tb-lsdr-seqfilecreator/: .test.crc  pom.xml  pom.xml~  test
tb-wc-csv2tifowa/: README  pom.xml
tb-wc-hd-archd/: README  pom.xml
tb-wc-merge-tifowa-reports/: README  pom.xml
tb-wc-tifowa/: README  pom.xml  pom.xml~
wpalyzer/: capture.rb
xa-jax-ws-service/: pom.xml
xa-pit/: .classpath  .project  README.md  pom.xml
xa-rester/: pom.xml
xa-toolwrapper/: .gitignore  .project  README  cp_inputconfig.json  cp_outputconfig.json  default-toolspec.xml  default.properties  default.xml  default_inputconfig.json  default_outputconfig.json  inputconfig.json  oj14.properties  oj14_inputconfig.json  oj14_outputconfig.json  outputconfig.json  pom.xml  projectconfig.properties  toolwrapper.properties
(+1494 files in other folders)
